# Forklift-Twin-Actuator

./: .gitignore  BEGINNER_GUIDE.md  CHECKLIST.md  DEVELOPMENT_SETUP.md  Forklift-Twin-Actuator.sln  QUICK_SETUP.md  README.md  README_FTA.md
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  PACKAGE_STRUCTURE.md  USB_PACKET_CAPTURE_GUIDE.md
docs/architecture/: USB_DRIVER_DESIGN.md
docs/development/: DEVELOPMENT_SCENARIO_STATUS.md
docs/status/: CURRENT_STATUS.md  SUMMARY.md
fta_actuators/: CMakeLists.txt  PHASE_1_2_COMPLETION.md  README.md  RESTRUCTURE_SUMMARY.md  SCENARIO_GUIDE.md  package.xml
fta_actuators/config/: led_buzzer.yaml
fta_actuators/docs/: DIRECTORY_STRUCTURE.md  PATLITE.md  PATLITE_HARDWARE_DRIVER.md  PATLITE_NEDLL_STATUS.md  USB_DIRECT_IMPLEMENTATION_COMPLETE.md  USB_PACKET_CAPTURE_GUIDE.md
fta_actuators/include/fta_actuators/: led_buzzer_node.hpp
fta_actuators/include/fta_actuators/common/: actuator_interface.hpp
fta_actuators/include/fta_actuators/patlite/: patlite_driver.hpp  patlite_scenarios.hpp  patlite_usb_driver.hpp
fta_actuators/include/fta_actuators/patlite_led_buzzer/: patlite_led_buzzer_controller.hpp  patlite_led_buzzer_driver.hpp  patlite_led_buzzer_hardware_interface.hpp  patlite_led_buzzer_mock_driver.hpp  patlite_led_buzzer_nedll_driver.hpp  patlite_led_buzzer_node.hpp  patlite_led_buzzer_scenarios.hpp  patlite_led_buzzer_types.hpp  patlite_led_buzzer_usb_direct_driver.hpp  patlite_led_buzzer_usb_driver.hpp
fta_actuators/launch/: led_buzzer.launch.py  test_led_buzzer.launch.py
fta_actuators/src/: led_buzzer_node.cpp  led_buzzer_node_main.cpp  signal_controller_node.cpp  test_action_publisher.cpp
fta_actuators/src/patlite/: patlite_driver.cpp  patlite_scenarios.cpp  patlite_usb_driver.cpp
fta_actuators/src/patlite_led_buzzer/: patlite_led_buzzer_controller.cpp  patlite_led_buzzer_driver.cpp  patlite_led_buzzer_hardware_factory.cpp  patlite_led_buzzer_nedll_driver.cpp  patlite_led_buzzer_node.cpp  patlite_led_buzzer_node_main.cpp  patlite_led_buzzer_scenarios.cpp  patlite_led_buzzer_usb_direct_driver.cpp  patlite_led_buzzer_usb_driver.cpp
fta_actuators/src/tests/: test_ros2_signal_publisher.cpp
fta_beginner/: CMakeLists.txt  README.md  USB_DRIVER_README.md  package.xml
fta_beginner/src/: patlite_test.cpp  simple_publisher.cpp  simple_subscriber.cpp  test_scenarios.cpp  usb_device_info.cpp
fta_interfaces/: CMakeLists.txt  package.xml
fta_interfaces/msg/: ActionEvent.msg  ActuatorStatus.msg  PatliteAction.msg  PatliteCommand.msg  SignalCommand.msg
scripts/: README.md  build_on_remote.sh  deploy_and_build.ps1  deploy_to_remote.ps1
